# sarow

./: .gitignore  README.md
sarow-mumble/: Dockerfile  requirements.txt
sarow-mumble/AppImage/: README.md  build.sh
sarow-mumble/src/: sarow-mumble.py
sarow-server/: Cargo.toml  Dockerfile
sarow-server/config/: default.toml  development.toml
sarow-server/src/: auth.rs  config.rs  main.rs
